Havde glemt at rydde SGML-tar-filen op ved "clean".

--- a/program/Makefile.XML
+++ b/program/Makefile.XML
@@ -73,6 +73,6 @@ udgave:
 clean:
 	rm -fr bog pdf postscript
 	rm -f  dato.sgml magic.sgml stikord.sgml version.sgml
-	rm -f  $(targetname)-*-html.tar.gz
+	rm -f  $(targetname)-*-{html,sgml}.tar.gz
 
 #-----------------------------------------------------------------------------
