Nu kan der vist genereres palm-udgaver uden problemer.
Jeg har nedskrevet nogle af mine overvejelser om bogens struktur.

--- a/program/.cvsignore
+++ b/program/.cvsignore
@@ -5,3 +5,7 @@ magic.sgml
 dato.sgml
 ophavsret.sgml
 bogoversigt.sgml
+texput.log
+strukturovervejelser.log
+strukturovervejelser.dvi
+strukturovervejelser.aux
