Laver nu både ".zip"- og ".tar.gz"-pakker.

--- a/program/Makefile.XML
+++ b/program/Makefile.XML
@@ -48,7 +48,8 @@ postscript: stikord dato udgave
 pakket_html: html
 	mkdir -p $(targetname)-$(version)-html
 	cp -p bog/*.{html,png} $(targetname)-$(version)-html/
-	tar czvf $(targetname)-$(version)-html.tar.gz $(targetname)-$(version)-html
+	tar czvf     $(targetname)-$(version)-html.tar.gz $(targetname)-$(version)-html
+	zip -yourDT9 $(targetname)-$(version)-html.zip    $(targetname)-$(version)-html
 	rm -rf $(targetname)-$(version)-html
 
 pakket_palm: html
@@ -62,7 +63,7 @@ pakket_palm: html
 	(cd $(targetname)-$(version)-palm/; plucker-build -v -P . -f $(targetname))
 	zip $(targetname)-$(version)-palm.zip $(targetname)-$(version)-palm/*.prc \
 	                                      $(targetname)-$(version)-palm/*.pdb \
-	                                      $(targetname)-$(version)-palm/*txt
+	                                      $(targetname)-$(version)-palm/*.txt
 	rm -rf $(targetname)-$(version)-palm
 
 kildetekst:
@@ -71,7 +72,8 @@ kildetekst:
 	cp -p collateindex.pl $(targetname)-$(version)-source/collateindex.pl
 	cp -p *.sgml          $(targetname)-$(version)-source/
 	cp -p images/*.png    $(targetname)-$(version)-source/images/
-	tar czvf $(targetname)-$(version)-source.tar.gz $(targetname)-$(version)-source
+	tar czvf     $(targetname)-$(version)-source.tar.gz $(targetname)-$(version)-source
+	zip -yourDT9 $(targetname)-$(version)-source.zip    $(targetname)-$(version)-source
 	rm -rf $(targetname)-$(version)-source
 
 stikord:
@@ -90,5 +92,6 @@ clean:
 	rm -fr bog pdf postscript
 	rm -f  dato.sgml magic.sgml stikord.sgml version.sgml
 	rm -f  $(targetname)-*-{html,source}.tar.gz
+	rm -f  $(targetname)-*-{palm}.zip
 
 #-----------------------------------------------------------------------------
