Sørget for at palmepadde-udgaven også bliver bygget, når vi igen forsøger at lave postscript- og PDF-udgaver.

--- a/program/Makefile.XML
+++ b/program/Makefile.XML
@@ -20,7 +20,7 @@ ImageMagickconvert:=$(firstword $(wildcard /usr/bin/convert /usr/X11R6/bin/conve
 #--  Byggeregler:
 
 all: html pakket_html pakket_palm kildetekst
-#all: html pdf postscript pakket_html kildetekst
+#all: html pdf postscript pakket_html pakket_palm kildetekst
 
 html: stikord dato udgave
 	mkdir -p bog
