På vej til noget der kører under RH7.3

--- a/Makefile.subdir_RH73
+++ b/Makefile.subdir_RH73
@@ -138,7 +138,7 @@ bog/index.html: $(sgmlfiler)
 	rm -rf tempdir/ bog
 	mkdir bog
 	cp *.sgml bog/
-	(cd bog; docbook2html bog.sgml)
+	(cd bog; docbook2html  -V  %use-id-as-filename% bog.sgml)
 	cp linuxbog.css bog
 	cp images/*.png bog
 ifeq	($(shell perl -e 'use Image::Size; print "1"' 2> /dev/null), 1)
