Rettet på "clean"-reglerne.

--- a/program/Makefile.XML
+++ b/program/Makefile.XML
@@ -91,7 +91,6 @@ udgave:
 clean:
 	rm -fr bog pdf postscript
 	rm -f  dato.sgml magic.sgml stikord.sgml version.sgml
-	rm -f  $(targetname)-*-{html,source}.tar.gz
-	rm -f  $(targetname)-*-{palm}.zip
+	rm -f  $(targetname)-*-{html,palm,source}.{tar.gz,zip}
 
 #-----------------------------------------------------------------------------
