Pakker nu også ".xml"-filer med i kildetekstpakkerne.

--- a/Makefile.subdir_RH72
+++ b/Makefile.subdir_RH72
@@ -13,4 +13,4 @@ html:
 	(cd bog;jw -b html --dcl "-V html-index" bog.sgml)
 	/usr/bin/collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o bog/stikord.sgml bog/HTML.index
 	(cd bog;jw -b html  bog.sgml)
-	rm bog/*.sgml
+	rm bog/*.{sgml,xml}
