Spec-filer skal ikke læses fra ..

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -108,7 +108,7 @@ pakhtml:
 	echo Summary: `grep -A2 "<title>" indhold.sgml | head -n 1 | cut -d '>' -f 2 | cut -d '<' -f 1` >> bog/$(targetname).spec
 	echo Version: `cat version.sgml` >> bog/$(targetname).spec
 	echo Release: 1mdk >>  bog/$(targetname).spec
-	cat ../linuxbog.spec >> bog/$(targetname).spec
+	cat linuxbog.spec >> bog/$(targetname).spec
 	mv bog $(targetshortname)
 	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).html.tar.gz $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler  )
 	(cd ..;zip $(targetshortname)/$(targetname)-$(version)_html.zip -r $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler)
