--- a/Makefile.SuSE80
+++ b/Makefile.SuSE80
@@ -257,7 +257,7 @@ endif
 
 clean:
 	@echo clean $(targetshortname)
-	@rm -rf dato.sgml version.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9]
+	@rm -rf dato.sgml version.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9] db2html.*
 	
 ifeq ($(lokmake),Makefile_local)
 	echo X $(lokmake) X
