Lidt mere ignore

--- a/signatur/.cvsignore
+++ b/signatur/.cvsignore
@@ -1,3 +1,8 @@
-bogoversigt.sgml
-ophavsret.sgml
+version.sgml
 Makefile
+stikord.sgml
+magic.sgml
+dato.sgml
+ophavsret.sgml
+bogoversigt.sgml
+linuxbog.spec
