--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -81,9 +81,9 @@ ekstra:
 # Build the sgml package
 sgml: $(targetname)-$(version).sgml.tar.gz
 $(targetname)-$(version).sgml.tar.gz: $(sgmlfiler)
-	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz $(targetshortname)/*.{sgml,xml,inc} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
 	(cd ..;ln -sf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz $(targetshortname)/$(targetname).sgml.tar.gz)
-	(cd ..;zip $(targetshortname)/$(targetname)-$(version).sgml.zip -r $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl )
+	(cd ..;zip $(targetshortname)/$(targetname)-$(version).sgml.zip -r $(targetshortname)/*.{sgml,xml,inc} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl )
 
 # Build the Palm Pilot Package
 palmpilot: $(targetname)-$(version).palm.zip
