inc-filer er noget sovs

--- a/dokumentation/Makefile_local
+++ b/dokumentation/Makefile_local
@@ -1,7 +1,7 @@
 # $Id$
 
 all: 
-	cat *.sgml | ./usedtags.pl | sort -nr > usedtags.inc
+	cat *.sgml | ./usedtags.pl | sort -nr > usedtags_now.sgml
 
 clean:
-	rm -f usedtags.inc
+	rm -f usedtags_now.sgml
