Kalder include-filen for .sgml i stedet for .inc. Problem med expansion af *.inc driller :(

--- a/signatur/Makefile_local
+++ b/signatur/Makefile_local
@@ -1,7 +1,7 @@
 # $Id$
 
 all:
-	 eksempler/perl2sgml.pl < eksempler/req-kmd-ca.pl > req-kmd-ca.inc
+	 eksempler/perl2sgml.pl < eksempler/req-kmd-ca.pl > req-kmd-ca.sgml
 
 clean:
-	rm -f  req-kmd-ca.inc
+	rm -f  req-kmd-ca.sgml
