--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -146,7 +146,10 @@ ifeq	($(shell if which tidy >/dev/null 2>&1; then echo -n 1; fi;), 1)
 else
 	@echo "Du bør installere HTML Tidy"
 endif
+	footer=../bottom.incl; if [ -e $${footer} ]; then perl -i -pe 'use locale; BEGIN { $$file=`cat '$${footer}'` } s:^\s*</body>\s*$$:$$file:gi' bog/*.html; echo "Found footer: '$${footer}'"; else echo "Could not find footer: '$${footer}'"; fi
 	footer=../../bottom.incl; if [ -e $${footer} ]; then perl -i -pe 'use locale; BEGIN { $$file=`cat '$${footer}'` } s:^\s*</body>\s*$$:$$file:gi' bog/*.html; echo "Found footer: '$${footer}'"; else echo "Could not find footer: '$${footer}'"; fi
+	footer=../../../bottom.incl; if [ -e $${footer} ]; then perl -i -pe 'use locale; BEGIN { $$file=`cat '$${footer}'` } s:^\s*</body>\s*$$:$$file:gi' bog/*.html; echo "Found footer: '$${footer}'"; else echo "Could not find footer: '$${footer}'"; fi
+	footer=../../../../bottom.incl; if [ -e $${footer} ]; then perl -i -pe 'use locale; BEGIN { $$file=`cat '$${footer}'` } s:^\s*</body>\s*$$:$$file:gi' bog/*.html; echo "Found footer: '$${footer}'"; else echo "Could not find footer: '$${footer}'"; fi
 	#if [ -e ../../bottom.incl ];then perl -i -pe 'use locale; BEGIN { $$file=`cat ../../bottom.incl` } s:^\s*</body>\s*$$:$$file:gi' bog/*.html; echo "4 prikker"; fi
 	(cd bog;rm -f apprevhist.html;ln -sf *apprevhist.html apprevhist.html)
 	make pakhtml
