--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -79,17 +79,17 @@ ekstra:
 	make -f Makefile_local
 
 # Build the sgml package
-sgml: $(targetname)-$(version).sgml.tar.gz
-$(targetname)-$(version).sgml.tar.gz: $(sgmlfiler)
-	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
-	(cd ..;ln -sf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz $(targetshortname)/$(targetname).sgml.tar.gz)
-	(cd ..;zip $(targetshortname)/$(targetname)-$(version).sgml.zip -r $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl )
+sgml: $(targetname)-sgml-$(version).tar.gz
+$(targetname)-sgml-$(version).tar.gz: $(sgmlfiler)
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-sgml-$(version).tar.gz $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
+	(cd ..;ln -sf $(targetshortname)/$(targetname)-sgml-$(version).tar.gz $(targetshortname)/$(targetname).sgml.tar.gz)
+	(cd ..;zip $(targetshortname)/$(targetname)-sgml-$(version).zip -r $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl )
 
 # Build the Palm Pilot Package
-palmpilot: $(targetname)-$(version).palm.zip
-$(targetname)-$(version).palm.zip: $(sgmlfiler)
+palmpilot: $(targetname)-palm-$(version).zip
+$(targetname)-palm-$(version).zip: $(sgmlfiler)
 ifneq   ("$(plucker)","")
-	rm -f $(targetname)-$(version).palm.zip $(targetname)-$(version).palm.tar.gz
+	rm -f $(targetname)-palm-$(version).zip $(targetname)-palm-$(version).tar.gz
 	$(MAKE) html
 	rm -f palm/*.prc palm/*.pdb
 	(cd palm;plucker-build -v -P . -f $(targetname))
@@ -97,7 +97,7 @@ ifneq   ("$(plucker)","")
 	cp ../misc/*.pdb palm
 	cp ../misc/gpl.txt palm
 	cp ../misc/plucker.txt palm
-	(zip $(targetname)-$(version).palm.zip palm/*.prc palm/*.pdb palm/*txt )
+	(zip $(targetname)-palm-$(version).zip palm/*.prc palm/*.pdb palm/*txt )
 else
 	echo "Du bør installere plucker for at kunne lave palm-udgaven"
 endif
@@ -110,7 +110,7 @@ pakhtml:
 	echo Release: 1mdk >>  bog/$(targetname).spec
 	cat linuxbog.spec >> bog/$(targetname).spec
 	mv bog $(targetshortname)
-	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).html.tar.gz $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler  )
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-html-$(version).tar.gz $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler  )
 	(cd ..;zip $(targetshortname)/$(targetname)-html-$(version).zip -r $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler)
 	(cd ..;tar cvzf $(targetshortname)/$(targetname)-htmlub-$(version).tar.gz $(targetshortname)/$(targetshortname)/*.html $(targetshortname)/$(targetshortname)/*.css $(targetshortname)/eksempler   )
 	mv $(targetshortname) bog 
