PS-filer som zip

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -221,7 +221,7 @@ $(targetname)-pdf-$(version).zip: $(sgmlfiler)
 	(cd bogps; perl ../../httpsplit.pl *.{sgml,xml})
 	(cd bogps; db2ps bog.sgml )
 	mv bogps/bog.ps $(targetname)-$(version).ps
-	gzip -9 $(targetname)-$(version).ps
+	zip $(targetname)-ps-$(version).zip $(targetname)-$(version).ps
 	@echo "Done PS (pspdf)"
 	@echo ""
 
@@ -251,7 +251,6 @@ endif
 clean:
 	@echo clean $(targetshortname)
 	@rm -rf dato.sgml version.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9]
-	
 ifeq ($(lokmake),Makefile_local)
 	echo X $(lokmake) X
 	@make -f Makefile_local clean
