--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -79,11 +79,11 @@ ekstra:
 	make -f Makefile_local
 
 # Build the sgml package
-sgml: $(targetname)-$(version).sgml.tar.gz
-$(targetname)-$(version).sgml.tar.gz: $(sgmlfiler)
-	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
-	(cd ..;ln -sf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz $(targetshortname)/$(targetname).sgml.tar.gz)
-	(cd ..;zip $(targetshortname)/$(targetname)-$(version).sgml.zip -r $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl )
+sgml: $(targetname)-sgml-$(version).tar.gz
+$(targetname)-sgml-$(version).tar.gz: $(sgmlfiler)
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-sgml-$(version).tar.gz $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
+	(cd ..;ln -sf $(targetshortname)/$(targetname)-sgml-$(version).tar.gz $(targetshortname)/$(targetname).sgml.tar.gz)
+	(cd ..;zip $(targetshortname)/$(targetname)-sgml-$(version).zip -r $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile $(targetshortname)/collateindex.pl )
 
 # Build the Palm Pilot Package
 palmpilot: $(targetname)-$(version).palm.zip
@@ -99,15 +99,15 @@ ifneq   ("$(plucker)","")
 	cp ../misc/plucker.txt palm
 	(zip $(targetname)-$(version).palm.zip palm/*.prc palm/*.pdb palm/*txt )
 else
-	echo "Du bør installere plucker for at kunne lave palm-udgaven"
+	@echo "Du bør installere plucker for at kunne lave palm-udgaven"
 endif
 
 pakhtml: 
-	echo %define buildname $(targetshortname) > bog/$(targetname).spec
-	echo Name: linuxbog-$(targetshortname) >> bog/$(targetname).spec
-	echo Summary: `grep -A2 "<title>" indhold.sgml | head -n 1 | cut -d '>' -f 2 | cut -d '<' -f 1` >> bog/$(targetname).spec
-	echo Version: `cat version.sgml` >> bog/$(targetname).spec
-	echo Release: 1mdk >>  bog/$(targetname).spec
+	@echo %define buildname $(targetshortname) > bog/$(targetname).spec
+	@echo Name: linuxbog-$(targetshortname) >> bog/$(targetname).spec
+	@echo Summary: `grep -A2 "<title>" indhold.sgml | head -n 1 | cut -d '>' -f 2 | cut -d '<' -f 1` >> bog/$(targetname).spec
+	@echo Version: `cat version.sgml` >> bog/$(targetname).spec
+	@echo Release: 1mdk >>  bog/$(targetname).spec
 	cat linuxbog.spec >> bog/$(targetname).spec
 	mv bog $(targetshortname)
 	(cd ..;tar cvzf $(targetshortname)/$(targetname)-html-$(version).tar.gz $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler  )
@@ -117,17 +117,17 @@ pakhtml:
 	mv images $(targetshortname)_images
 	(cd ..;tar cvzf  $(targetshortname)/$(targetname)-png-$(version).tar.gz $(targetshortname)/$(targetshortname)_images/ )
 	mv $(targetshortname)_images images 
-	@echo "Done HTML pakning (pakhtml)"
+	@@echo "Done HTML pakning (pakhtml)"
 	@echo ""
 	@echo ""
 
 # Build the html
 html: bog/index.html 
 bog/index.html: $(sgmlfiler) 
-	@echo "Target er HTML i" $(targetshortname)/bog
+	@@echo "Target er HTML i" $(targetshortname)/bog
 	rm -rf $(targetname)*
 	rm -rf stikord.sgml magic.sgml $(targetname)-*.html.tar.gz bog
-	echo '<!ENTITY magic "png">' > magic.sgml
+	@echo '<!ENTITY magic "png">' > magic.sgml
 	/usr/bin/collateindex.pl -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	jw -V html-index -f docbook -b html -o bog bog.sgml
 	/usr/bin/collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index
@@ -173,12 +173,12 @@ bog/enfil.html: $(sgmlfiler)
 ifeq	($(shell perl -e 'use Image::Size; print "1"' 2> /dev/null), 1)
 	(cd bog1;perl ../../misc/insertimagesize)
 else
-	echo "Du bør installere Perl-modulet Image:Size"
+	@echo "Du bør installere Perl-modulet Image:Size"
 endif
 ifeq	($(shell if which tidy >/dev/null 2>&1; then echo -n 1; fi;), 1)
 	(cd bog1;tidy -f err.txt -imu *html;rm -f err.txt)
 else
-	echo "Du bør installere tidy"
+	@echo "Du bør installere tidy"
 endif
 	cp bog1/index.html bog/enfil.html
 	rm -rf bog1
@@ -193,7 +193,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	rm -f $(targetname)-*.ps              
 	mkdir tempdir
 
-	echo '<!ENTITY magic "eps">' > magic.sgml
+	@echo '<!ENTITY magic "eps">' > magic.sgml
 	/usr/bin/collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	touch test.inc
 	cp *.{sgml,xml} tempdir
@@ -203,7 +203,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	/usr/bin/collateindex.pl -s Symboler -t Stikordsregister  -g -i stikord  -o stikord.sgml tempdir/HTML.index
 
 	@echo "Target er" $(targetname)_pdf.zip
-	echo '<!ENTITY magic "png">' > magic.sgml
+	@echo '<!ENTITY magic "png">' > magic.sgml
 	mkdir bogpdf
 	touch test.inc
 	cp *.inc bogpdf
@@ -223,10 +223,10 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	@echo "Done PDF (pspdf)"
 	@echo ""
 
-	echo '<!ENTITY magic "eps">' > magic.sgml
+	@echo '<!ENTITY magic "eps">' > magic.sgml
 	mkdir bogps
 	find images/*.png | sed 's/.png//' | sed 's=images/==' | xargs -i% $(ImageMagickconvert) -antialias images/%.png eps2:bogps/%.eps
-	echo '<!ENTITY magic "eps">' > magic.sgml
+	@echo '<!ENTITY magic "eps">' > magic.sgml
 	touch test.inc	
 	cp *.inc bogps
 	cp *.{sgml,xml} bogps
@@ -244,7 +244,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 
 
 test:
-	echo $(eksfiler)
+	@echo $(eksfiler)
 
 eksempelbackup:  $(targetname)-eksempler-$(version).tar.gz
 $(targetname)-eksempler-$(version).tar.gz : $(eksfiler)
@@ -265,10 +265,10 @@ clean:
 	@echo clean $(targetshortname)
 	@rm -rf dato.sgml version.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9]
 ifeq ($(lokmake),Makefile_local)
-	echo X $(lokmake) X
+	@echo X $(lokmake) X
 	@make -f Makefile_local clean
 else
-	echo "Ingen lokal Makefile"
+	@echo "Ingen lokal Makefile"
 endif
 	@echo "Færdig med clean $(targetshortname)"
 
