--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -50,14 +50,8 @@ plucker:=$(wildcard /usr/bin/plucker-build)
 # Har vi tidy installeret?
 tidy:=$(wildcard /usr/bin/tidy)
 
-# Cygnus path
-cygnus:=$(firstword $(wildcard /usr/share/sgml/docbook/utils-0.6.9/docbook-utils.dsl /usr/share/sgml/docbook/dsssl-stylesheets-cygnus/stylesheets/cygnus-both.dsl /usr/lib/sgml/stylesheets/cygnus-both.dsl /usr/lib/sgml/stylesheet/dsssl/docbook/cygnus/cygnus-both.dsl))
-
-# Image Magick convert
-ImageMagickconvert:=$(firstword $(wildcard /usr/bin/convert /usr/X11R6/bin/convert))
-
 # her er det der skal laves
-all: start ekstra html sgml eksempelbackup stop
+all: start ekstra html pdf sgml eksempelbackup stop
 
 start:
 	@echo "-------------------------------------------"
