--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -162,9 +162,8 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	(cd tempdir;/usr/bin/collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index)
 	(cd tempdir; db2pdf bog.sgml; db2pdf bog.sgml)
 	mv tempdir/bog.pdf $(targetname)-$(version).pdf
-	rm -rf tempdir
 	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
-	zip $(targetname)-$(version)_pdf.zip $(targetname)-$(version).pdf
+	zip $(targetname)-pdf-$(version).zip $(targetname)-$(version).pdf
 	@echo "Done PDF (pdf)"
 	@echo ""
 
